Removi alguns pontos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section id="form">
             <form id="add-task">
                 <input type="text" maxlength="20" id="input" required placeholder="Insira uma tarefa">
-                <abbr title="Adicionar tarefa.">
+                <abbr title="Adicionar tarefa">
                     <button>
                         <i class="fa-solid fa-plus"></i>
                     </button>
